package com.frostholl.routingproject;

public enum ChooseState {
    NONE,
    START,
    END
}
